--- a/StreamDeck-Shortcuts/Info.plist
+++ b/StreamDeck-Shortcuts/Info.plist
@@ -7,6 +7,6 @@
 	<key>CFBundleName</key>
 	<string>StreamDeck-Shortcuts</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.1</string>
+	<string>$(MARKETING_VERSION)</string>
 </dict>
 </plist>
