Added Sentry error handling, changed the default function for running a Shortcut, & bumped the version.

--- a/StreamDeck-Shortcuts/Info.plist
+++ b/StreamDeck-Shortcuts/Info.plist
@@ -8,5 +8,7 @@
 	<string>StreamDeck-Shortcuts</string>
 	<key>CFBundleShortVersionString</key>
 	<string>$(MARKETING_VERSION)</string>
+	<key>CFBundleVersion</key>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 </dict>
 </plist>
