Push v1.0.4, which includes further bug fixes & yet another Shortcuts Runner.

--- a/StreamDeck-Shortcuts/Info.plist
+++ b/StreamDeck-Shortcuts/Info.plist
@@ -10,5 +10,7 @@
 	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>NSAppleEventsUsageDescription</key>
+	<string>Allows the use of appleEvents</string>
 </dict>
 </plist>
