removed new Xcode data

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ xcuserdata/
 DerivedData/
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 /StreamDeck-Shortcuts/analytics.swift
+*.xcuserstate
+**/xcuserdata/
